--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,6 +9,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <script src="https://map.qq.com/api/js?v=2.exp&key=3TLBZ-5PUKV-J7KPK-UVZ5U-RA7CK-ANBW3"></script>
   <style>
     * {
       margin: 0;
